fix(website): refine visual scheme (alignment)

--- a/website/src/components/styles.module.css
+++ b/website/src/components/styles.module.css
@@ -27,8 +27,6 @@
 }
 
 .scheme {
-  /* margin-left: 120px; */
-  margin-left: 7rem;
   padding-top: 1rem;
   padding-bottom: 4rem;
 }
